--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ package:
 source:
   git_url: git://github.com/ggerganov/llama.cpp.git
   git_rev: b{{ version.split(".")[-1] }}
+  folder: llama.cpp
   # url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
   # sha256: 64aaf58532c62eac4eb17007a0239546591ebc87e284e0a8235ced4987582531
   patches:
@@ -63,7 +64,6 @@ outputs:
         - pkgconfig
         - patch  # [osx or (unix and blas_impl == "mkl") or aarch64]
         - m2-patch  # [win]
-        - git
       host:
         - cudatoolkit      {{ cuda_compiler_version }}        # [gpu_variant == "cuda-11"]
         - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda')]
