--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,9 +20,18 @@ source:
 requirements:
   build:
     - git
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - {{ compiler('cuda') }} # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11")]
+    - cmake
+    - ninja-base
+    - pkgconfig
+    - patch  # [osx or (unix and blas_impl == "mkl") or aarch64]
+    - m2-patch  # [win]
 
   host:
     - git
+
 
 outputs:
   - name: llama.cpp
