--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,10 +7,10 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/ggerganov/llama.cpp.git
-  git_rev: b{{ version.split(".")[-1] }}
-  # url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
-  # sha256: 64aaf58532c62eac4eb17007a0239546591ebc87e284e0a8235ced4987582531
+  # git_url: https://github.com/ggerganov/llama.cpp.git
+  # git_rev: b{{ version.split(".")[-1] }}
+  url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
+  sha256: 1043b53327e3a0ef2387e0267f3fcac00722bd7b8b6109198a8f1548983a9cb6
   patches:
     - patches/mkl.patch                   # [blas_impl == "mkl"]
     - patches/loosen-max_nmse_err.patch   # [osx]
@@ -167,7 +167,7 @@ outputs:
         - pytorch >=2.0.0
         - tqdm >=4.66.5
         - transformers >=4.44.1
-        - {{ pin_subpackage('gguf', exact=True) }}
+        - {{ pin_subpackage('gguf', max_pin='x.x.x') }}
 
     test:
       imports:
