--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -153,7 +153,7 @@ outputs:
         - poetry-core >=1.0.0
         - pip
       run:
-        - python
+        - python >=3.9
         - huggingface_hub >=0.24.6
         - jinja2 >=3.1.4
         - numpy >=1.25.0
