--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -153,7 +153,7 @@ outputs:
         - poetry-core >=1.0.0
         - pip
       run:
-        - python >=3.9
+        - python
         - huggingface_hub >=0.24.6
         - jinja2 >=3.1.4
         - numpy >=1.25.0
@@ -215,11 +215,11 @@ outputs:
 
     requirements:
       host:
-        - python >=3.9
+        - python
         - poetry-core >=1.0.0
         - pip
       run:
-        - python >=3.9
+        - python
         - numpy >=1.17
         - tqdm >=4.27
         - pyyaml >=5.1
