--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -169,6 +169,7 @@ outputs:
         - tqdm >=4.66.5
         - transformers >=4.44.1
         - {{ pin_subpackage('gguf', exact=True) }}
+        - {{ pin_subpackage('llama.cpp', exact=True) }}
 
     test:
       imports:
