--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,10 +8,10 @@ package:
   version: {{ version }}
 
 source:
-  # git_url: https://github.com/ggerganov/llama.cpp.git
-  # git_rev: b{{ version.split(".")[-1] }}
-  url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
-  sha256: 1043b53327e3a0ef2387e0267f3fcac00722bd7b8b6109198a8f1548983a9cb6
+  git_url: https://github.com/ggerganov/llama.cpp.git
+  git_rev: b{{ version.split(".")[-1] }}
+  # url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
+  # sha256: 1043b53327e3a0ef2387e0267f3fcac00722bd7b8b6109198a8f1548983a9cb6
   patches:
     - patches/mkl.patch                   # [blas_impl == "mkl"]
     - patches/loosen-max_nmse_err.patch   # [osx]
