--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -24,12 +24,13 @@ blas_impl:
   - mkl                        # [win or (linux and x86_64)]
   - openblas                   # [linux]
   - accelerate                 # [osx]
-  - cublas                     # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+  - cublas                     # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
 
 gpu_variant:
   - none
   - metal                      # [osx]
-  - cuda-12                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+  - cuda-12                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
+  - cuda-13                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
 
 # metal builds now require the MTLBuffer gpuAddress property, introduced in macOS 13.0
 # metal builds now require the MTLDataType.bfloat4 data type, introduced in macOS 14.0
@@ -37,14 +38,15 @@ gpu_variant:
 OSX_SDK_VER:                   # [osx]
   - 14.5                       # [osx]
 
-cuda_compiler_version:         # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-  - none                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-  - 12.4                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+cuda_compiler_version:         # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
+  - none                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
+  - 12.4                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
+  - 13.1                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
 
-cuda_compiler:                 # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-- cuda-nvcc                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+cuda_compiler:                 # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
+- cuda-nvcc                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
 
-zip_keys:                      # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-  -                            # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-    - gpu_variant              # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-    - cuda_compiler_version    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+zip_keys:                      # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
+  -                            # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
+    - gpu_variant              # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
+    - cuda_compiler_version    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or linux)]
