--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -54,7 +54,10 @@ outputs:
       # Use a build number difference to ensure that the GPU
       # variant is slightly preferred by conda's solver, so that it's preferentially
       # installed where the platform supports it.
-      number: {{ build_number + 100 }}  # [gpu_variant != "none"]
+      # Different CUDA versions get different build numbers so the latest variant is preferred
+      number: {{ build_number + 110 }}  # [(gpu_variant or "").startswith('cuda') and cuda_compiler_version == "13.0"]
+      number: {{ build_number + 100 }}  # [(gpu_variant or "").startswith('cuda') and cuda_compiler_version == "12.8"]
+      number: {{ build_number + 100 }}  # [gpu_variant == "metal"]
       number: {{ build_number }}        # [gpu_variant == "none"]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda')]
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
@@ -128,7 +131,10 @@ outputs:
       # Use a build number difference to ensure that the GPU
       # variant is slightly preferred by conda's solver, so that it's preferentially
       # installed where the platform supports it.
-      number: {{ build_number + 100 }}  # [gpu_variant != "none"]
+      # Different CUDA versions get different build numbers so the latest variant is preferred
+      number: {{ build_number + 110 }}  # [(gpu_variant or "").startswith('cuda') and cuda_compiler_version == "13.0"]
+      number: {{ build_number + 100 }}  # [(gpu_variant or "").startswith('cuda') and cuda_compiler_version == "12.8"]
+      number: {{ build_number + 100 }}  # [gpu_variant == "metal"]
       number: {{ build_number }}        # [gpu_variant == "none"]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda')]
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
@@ -204,7 +210,10 @@ outputs:
       # Use a build number difference to ensure that the GPU
       # variant is slightly preferred by conda's solver, so that it's preferentially
       # installed where the platform supports it.
-      number: {{ build_number + 100 }}  # [gpu_variant != "none"]
+      # Different CUDA versions get different build numbers so the latest variant is preferred
+      number: {{ build_number + 110 }}  # [(gpu_variant or "").startswith('cuda') and cuda_compiler_version == "13.0"]
+      number: {{ build_number + 100 }}  # [(gpu_variant or "").startswith('cuda') and cuda_compiler_version == "12.8"]
+      number: {{ build_number + 100 }}  # [gpu_variant == "metal"]
       number: {{ build_number }}        # [gpu_variant == "none"]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda')]
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
